--- a/src/index.html
+++ b/src/index.html
@@ -66,7 +66,7 @@
       </div>
       <!-- **** -->
       <div class="hidden border-b-2 w-[100%] top-0 z-10 bg-white" id="navbar">
-        <div class="hidden container md:flex justify-between pt-5">
+        <div class="container md:flex justify-between pt-5">
           <div
             class="flex gap-3 mt-3 text-[0.92rem] text-pritext font-semibold"
           >
