--- a/src/index.html
+++ b/src/index.html
@@ -65,26 +65,28 @@
         </div>
       </div>
       <!-- **** -->
-      <div class="hidden border-b-2 w-[100%] top-0 z-10 bg-white" id="navbar">
-        <div class="container md:flex justify-between pt-5">
-          <div
-            class="flex gap-3 mt-3 text-[0.92rem] text-pritext font-semibold"
-          >
-            <a href="" class="hover:border-b-4 border-black">Photos</a>
-            <a href="" class="hover:border-b-4 border-black">Amenities</a>
-            <a href="" class="hover:border-b-4 border-black">Reviews</a>
-            <a href="" class="hover:border-b-4 border-black">Location</a>
-          </div>
-          <div class="flex items-center gap-3 pb-4">
-            <h1 class="text-[1.5rem] font-semibold">
-              ₹1,46,663
-              <span class="text-[1rem] font-normal">night</span>
-            </h1>
-            <button
-              class="py-3 ml-2 bg-primary font-semibold text-white w-[12rem] rounded-lg"
+      <div>
+        <div class="hidden border-b-2 w-[100%] top-0 z-10 bg-white" id="navbar">
+          <div class="container md:flex justify-between pt-5">
+            <div
+              class="flex gap-3 mt-3 text-[0.92rem] text-pritext font-semibold"
             >
-              Check availability
-            </button>
+              <a href="" class="hover:border-b-4 border-black">Photos</a>
+              <a href="" class="hover:border-b-4 border-black">Amenities</a>
+              <a href="" class="hover:border-b-4 border-black">Reviews</a>
+              <a href="" class="hover:border-b-4 border-black">Location</a>
+            </div>
+            <div class="flex items-center gap-3 pb-4">
+              <h1 class="text-[1.5rem] font-semibold">
+                ₹1,46,663
+                <span class="text-[1rem] font-normal">night</span>
+              </h1>
+              <button
+                class="py-3 ml-2 bg-primary font-semibold text-white w-[12rem] rounded-lg"
+              >
+                Check availability
+              </button>
+            </div>
           </div>
         </div>
       </div>
@@ -187,9 +189,9 @@
       <!-- ****** -->
 
       <!-- ***** -->
-      <div class="flex container justify-between">
+      <div class="flex container justify-between gap-5">
         <div class="lg:w-[70%] xl:w-[80%] md:w-[55%]">
-          <section class="container relative">
+          <section>
             <div>
               <div class="border-b-2 pb-7 relative">
                 <h1 class="text-[1.7rem] font-semibold w-[90%]">
@@ -233,7 +235,7 @@
             </div>
           </section>
           <!-- ****** -->
-          <section class="container">
+          <section>
             <div class="pt-4 pb-7 border-b-2">
               <h1 class="text-[2.2rem] font-bold mb-3">
                 <span class="text-primary">air</span>cover
@@ -267,7 +269,7 @@
             </div>
           </section>
           <!-- ******* -->
-          <section class="container">
+          <section>
             <div class="py-7 border-b-2">
               <h1 class="text-[1.5rem] font-semibold mb-5">
                 What this place offers
@@ -329,7 +331,7 @@
             </div>
           </section>
           <!-- ******* -->
-          <section class="container">
+          <section>
             <div class="border-b-2 py-8">
               <h1 class="text-[1.56rem] font-semibold">Select check-in date</h1>
               <h3 class="text-gray-700">
