changes in navbar

--- a/src/index.html
+++ b/src/index.html
@@ -65,28 +65,30 @@
         </div>
       </div>
       <!-- **** -->
-      <div>
-        <div class="hidden border-b-2 w-[100%] top-0 z-10 bg-white" id="navbar">
-          <div class="container md:flex justify-between pt-5">
-            <div
-              class="flex gap-3 mt-3 text-[0.92rem] text-pritext font-semibold"
+
+      <div
+        class="hidden h-0 md:h-[5.5rem] md:fixed border-b-2 w-[100%] top-0 z-10 bg-white"
+        id="navbar"
+      >
+        <div class="container md:flex justify-between pt-5">
+          <div
+            class="flex gap-3 mt-3 text-[0.92rem] text-pritext font-semibold"
+          >
+            <a href="" class="hover:border-b-4 border-black">Photos</a>
+            <a href="" class="hover:border-b-4 border-black">Amenities</a>
+            <a href="" class="hover:border-b-4 border-black">Reviews</a>
+            <a href="" class="hover:border-b-4 border-black">Location</a>
+          </div>
+          <div class="flex items-center gap-3 pb-4">
+            <h1 class="text-[1.5rem] font-semibold">
+              ₹1,46,663
+              <span class="text-[1rem] font-normal">night</span>
+            </h1>
+            <button
+              class="py-3 ml-2 bg-primary font-semibold text-white w-[12rem] rounded-lg"
             >
-              <a href="" class="hover:border-b-4 border-black">Photos</a>
-              <a href="" class="hover:border-b-4 border-black">Amenities</a>
-              <a href="" class="hover:border-b-4 border-black">Reviews</a>
-              <a href="" class="hover:border-b-4 border-black">Location</a>
-            </div>
-            <div class="flex items-center gap-3 pb-4">
-              <h1 class="text-[1.5rem] font-semibold">
-                ₹1,46,663
-                <span class="text-[1rem] font-normal">night</span>
-              </h1>
-              <button
-                class="py-3 ml-2 bg-primary font-semibold text-white w-[12rem] rounded-lg"
-              >
-                Check availability
-              </button>
-            </div>
+              Check availability
+            </button>
           </div>
         </div>
       </div>
